#*****************************************************************************
# Makefile.am (xpchello/include)
#-----------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	xpchello
# \author     	Chris Ahlstrom
# \date       	2008-05-09
# \update     	2012-06-17
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This module provides an Automake makefile for the xpchello
#     application's ./include directory.
#
#-----------------------------------------------------------------------------

SUBDIRS = xpc

#******************************************************************************
# Makefile.am (include)
#------------------------------------------------------------------------------
# Local Variables:
# End:
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=automake
#------------------------------------------------------------------------------
